attempting to fix the weirdness on iphone... like seriously, why so narrow?

--- a/src/App.scss
+++ b/src/App.scss
@@ -71,32 +71,44 @@ $nightmare__back--light: #009680;
 @mixin section-spacer($first-other-bottom) {
   @if $first-other-bottom == first {
     padding: {
-      top: 5rem;
-      bottom: 1.5rem;
+      top: 10rem;
+      bottom: 7.5rem;
     }
-
-  } @else if $first-other-bottom == other {
-    padding: {
-      top: 1.5rem;
-      bottom: 1.5rem;
-    }
-  } @else {
-    padding: {
-      top: 1.5rem;
-      bottom: 15rem;
-    }
-
     @media (min-width: 768px) {
       padding: {
-        bottom: 10rem;
+        top: 7.5rem;
+        bottom: 5rem;
       }
     }
 
     @media (min-width: 992px) {
       padding: {
-        bottom: 7.5rem
+        top: 5rem;
+        bottom: 2.5rem;
       }
     }
+  } @else if $first-other-bottom == other {
+    padding: {
+      top: 12rem;
+      bottom: 12rem;
+    }
+
+  } @else {
+    padding: {
+      top: 12rem;
+      bottom: 15rem;
+    }
+
+    //@media (min-width: 768px) {
+    //  padding: {
+    //    bottom: 10rem;
+    //  }
+    //}
+    //
+    //@media (min-width: 992px) {
+    //  padding: {
+    //    bottom: 7.5rem
+    //  }
 
   }
 }
@@ -387,15 +399,13 @@ $nightmare__back--light: #009680;
 
       &__title {
         @include title-style($naut-accent, $large-text);
-        padding: {
+        margin: {
           bottom: 1rem;
         }
         margin: auto;
         //
         //&--link {
-        background: linear-gradient($right-to-left, $naut-accent, $naut-text-1);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
+        color: $naut-accent;
         text-shadow: none;
         margin: auto;
 
@@ -403,15 +413,11 @@ $nightmare__back--light: #009680;
           text-decoration: none;
         }
 
-
-        &--unlinked {
-          background: none;
-          color: $naut-accent;
-
-        }
-
-        &--link {
-          border-bottom: 1px solid $naut-text-1;
+        &--linked {
+          background: linear-gradient($right-to-left, $naut-accent, $naut-text-1);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+                    border-bottom: 1px solid $naut-text-1;
 
           &:hover {
             border-bottom: 1px solid $naut-accent;
